# gunfollower

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: CrossPlatformBuilder.yaml  Releaser.yaml
src/: cli.rs  db.rs  handlers.rs  main.rs  network.rs  printer.rs
src/models/: followers.rs  mod.rs  user.rs
