[package]
name = "gunfollower"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sled = "0.34.7"
home = "0.5.3"

[dependencies.serde]  
version = "1.0.64"
features = ["derive"]
