[package]
name = "gunfollower"
version = "0.1.0"
edition = "2021"
readme = "README.md"
authors = ["Hemanth Krishna <hkpdev008@gmail.com>"]
license = "MIT"
homepage = "https://github.com/DarthBenro008/gunfollower"
repository = "https://github.com/DarthBenro008/gunfollower"
keywords = ["cli", "github", "unfollow", "social"]
categories = ["command-line-utilities"]

exclude = [
    "assets/*",
    ".github/*",
]

[dependencies]
structopt = "0.3.25"
serde_json = "1.0.64"
reqwest = { version = "0.11", features = ["blocking", "json"] }
sled = "0.34.7"
home = "0.5.3"
dialoguer = "0.9.0"
console = "0.15.0"

[dependencies.serde]  
version = "1.0.64"
features = ["derive"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]
